Changelog
=========

1.2.5 (unreleased)
------------------

- Nothing changed yet.


1.2.4 (2013-11-27)
------------------

- Add parallel worker mode to ``reindex_directory``.

- Handle invalid XML input (#10864).


1.2.3 (2012-04-18)
------------------

- Catch connection errors to ElasticSearch so they don't break the normal
  message handling. Messages that have not been index due to this can still be
  indexed later on via ``reindex_directory`` (#9363).


1.2.2 (2012-03-29)
------------------

- Make amqp server configurable for tests.


1.2.1 (2012-02-22)
------------------

- Switch to plone.testing.


1.2.0 (2011-08-23)
------------------

- Transform the XML body into a nested dict so ElasticSearch can index the
  fields individually.


1.1.0 (2011-08-23)
------------------

- Add command-line script ``reindex_directory``.


1.0.0 (2011-08-22)
------------------

- first release.